# bevy_color_blindness

./: .gitignore  Cargo.toml  README.md
examples/: main.rs
src/: color_blindness.wgsl  lib.rs  plugin.rs
