[package]
name = "bevy_color_blindness"
version = "0.2.0"
edition = "2021"
authors = ["annieversary <annie@versary.town>"]
description = "Bevy plugin to simulate color blindness"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "color-blindness", "accessibility"]
categories = ["accessibility", "game-development"]
repository = "https://github.com/annieversary/bevy_color_blindness"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
